[-] * can now read arguments from the terminal and read file